--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -36,12 +36,15 @@ oSTEM will not be hosting a hackathon at this year’s conference. Instead, we w
 
 Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information.
   
-oSTEM Members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? Click here to [join now](https://ostem.org/page/how-to-join-ostem).
+### Are registration discounts available? 
+Yes, oSTEM student and professional members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? [Join for free now](https://ostem.org/page/how-to-join-ostem).
+  
+If you are 1) an oSTEM faculty or staff advisor or 2) a member of a Massachusetts-based LGBTQ or DEI Employee Resource Group or Affinity Group, please email jamie.gonzales@ostem.org to discuss your eligibility for a discount.
 
 ### What does conference registration cover?
 
 - The Student and Professional tickets are both all-access passes to conference programming, events, and meals.
-  - oSTEM will provide Friday lunch and dinner and Saturday breakfast, lunch, and dinner. General Sunday breakfast will also be available.
+  - oSTEM will provide Friday lunch, Saturday breakfast, lunch, and dinner, and Sunday breakfast.
 - The Expo-only pass grants access only to the Graduate School and Career Fair Expo on Friday, November 11 and Saturday, November 12.
 
 ### Will there be on-site registration?
@@ -108,8 +111,8 @@ For further accessibility questions or concerns, please contact access@ostem.org
   ### Is there financial assistance for students to attend?
   Yes, if you are an official chapter looking for funding, [please click here](https://form.jotform.com/222355454457055). Please note that we **do not have the funds to fully support** all members of your chapter. We recommend seeking [additional assistance on campus and in your community](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843).
   
-### What is the [dress code](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134)?
-  Attendees are asked to dress in business casual attire which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
+### What is the dress code?
+  Attendees are asked to dress in [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
   ### Do I need to be "out" to attend? Will photos be taken?
   No. Everyone is welcome to attend the conference. We strive to create a safe and inclusive space regardless on if you are out or selectively out. While photos will be taken at the conference, anyone uncomfortable with their photo being shared has the option to pick a lanyard that indicates to photographers and other guests that you do not wish to have your photo shared.
