--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -9,13 +9,13 @@ import { CTAButton } from "../../components/button/CTAButton";
 
 ## **General Conference**
   
-### When is the 2022 Annual Conference?
+### When and where is the 2022 Annual Conference?
   
-November 11-13, 2022, but we recommend arriving Thursday, November 10th if feasible.
+Dates:
+   November 11-13, 2022, but we recommend arriving Thursday, November 10th if feasible.
   
-### Where is the 2022 conference?
-  
-[Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
+Location: 
+   [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St, Boston, MA 02199
 
 ### Where can I find the high-level schedule?
