--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -33,6 +33,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **2:10 PM - 3:10 PM**	    Workshop Block 3
 - **3:10 PM - 3:20 PM**	    Break
 - **3:30 PM - 4:30 PM**	    Workshop Block 4
+- **4:30 PM - 4:40 PM**	    Break   
 - **4:40 PM - 5:40 PM**	    Workshop Block 5
 - **5:40 PM - 6:00 PM**	    Get Ready for Dinner
 - **6:00 PM - 6:30 PM**	    Reception
