--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -11,10 +11,10 @@
 All times listed are in Eastern Time (ET). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
 
 ## Thursday, November 10
-- **12:00 PM - 6:00 PM**   Check-in Desk Open
+- **3:00 PM - 7:00 PM**   Registration Desk Open
     
 ## Friday, November 11
-- **9:00 AM - 10:00 AM**  New to the Conference Session
+- **9:00 AM - 10:00 AM**   New to the Conference Session
 - **9:00 AM - 1:00 PM**    Site Visits (Limited spots available.)
 - **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Greet Session
 - **12:00 PM - 1:00 PM**   Conference Kickoff Lunch with Keynote 
