--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -18,7 +18,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **9:00 AM - 1:00 PM**    Site Visits (Limited spots available.)
 - **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Greet Session
 - **12:00 PM - 1:00 PM**   Conference Kickoff Lunch with Keynote 
-- **1:00 PM - 4:15 PM**	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing)
+- **1:00 PM - 4:15 PM**	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
 - **4:30 PM - 5:30 PM**	   Workshop Block 1
 - **5:30 PM - 6:30 PM**	   Workshop Block 2
 - **4:30 PM - 6:30 PM**	   Racial Justice Program
@@ -28,7 +28,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 ## Saturday, November 12
 - **8:00 AM - 10:00 AM**	Breakfast
 - **9:00 AM - 10:00 AM**	Chapter Awards & Announcements
-- **10:15 AM - 12:15 PM**	[Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing)
+- **10:15 AM - 12:15 PM**	[Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
 - **12:30 PM - 2:00 PM**	Lunch & Learn Sessions
 - **2:10 PM - 3:10 PM**	    Workshop Block 3
 - **3:10 PM - 3:20 PM**	    Break
