--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -111,7 +111,12 @@ For further accessibility questions or concerns, please contact access@ostem.org
  ### Is there financial assistance for students to attend?
   Yes, if you are an official chapter looking for funding, [please click here](https://form.jotform.com/222355454457055). Please note that we **do not have the funds to fully support** all members of your chapter. We recommend seeking [additional assistance on campus and in your community](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843).
   
-### What is the dress code?
+### What should I bring to the conference?
+ - Copies of your resume and/or CV for the Career & Graduate School Expo
+ - Water bottle
+ - Nice, comfortable shoes for walking
+  
+  ### What is the dress code?
   Attendees are asked to dress in [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
   ### Do I need to be "out" to attend? Will photos be taken?
