--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -19,10 +19,9 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Greet Session
 - **12:00 PM - 1:00 PM**   Conference Kickoff Lunch with Keynote 
 - **1:00 PM - 4:15 PM**	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
-- **4:30 PM - 5:30 PM**	   Workshop Block 1
-- **5:30 PM - 6:30 PM**	   Workshop Block 2
-- **4:30 PM - 6:30 PM**	   Racial Justice Program
-- **6:30 PM - 7:15 PM**	   Membership Regional Mixer
+- **4:30 PM - 5:30 PM**	   Workshop Block 1 | Racial Justice Program Part 1
+- **5:40 PM - 6:40 PM**	   Workshop Block 2 | Racial Justice Program Part 2
+- **6:45 PM - 7:30 PM**	   Membership Regional Mixer
 
 ## Saturday, November 12
 - **8:00 AM - 10:00 AM**	Breakfast
@@ -30,12 +29,8 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **10:15 AM - 12:15 PM**	[Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
 - **12:30 PM - 2:00 PM**	Lunch & Learn Sessions
 - **2:10 PM - 3:10 PM**	    Workshop Block 3
-- **3:10 PM - 3:20 PM**	    Break
-- **3:30 PM - 4:30 PM**	    Workshop Block 4
-- **4:30 PM - 4:40 PM**	    Break   
-- **4:40 PM - 5:40 PM**	    Workshop Block 5
-- **5:40 PM - 6:00 PM**	    Get Ready for Dinner
-- **6:00 PM - 6:30 PM**	    Reception
+- **3:40 PM - 4:40 PM**	    Workshop Block 4
+- **4:50 PM - 5:50 PM**	    Workshop Block 5
 - **6:30 PM - 9:00 PM**	    oSTEM Gala with Dinner
 - **9:00 PM - 11:00 PM**	Social Mixers
 
