--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,7 +14,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <p className="text-5xl font-display font-black text-navy">12th Annual oSTEM Conference 2022</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
-    November 10 &ndash; 13, 2022 | Boston, MA
+    November 11 &ndash; 13, 2022 | Boston, MA
     </p>
 </div>
 <div className="grid md:grid-cols-5 mt-9">
@@ -36,7 +36,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             </div>
             <p className="p-4">
                 Registration for our conference is now open! Register today on our <a href="/2022/registration">registration page</a>. <br />
-                A 10% early bird discount is available untl August 31. oSTEM members receive additional discounted pricing.
+                oSTEM members receive additional discounted pricing.
             </p>
             <div className="text-xl flex justify-center p-2">
                 <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue">Register for the conference</CTAButton>
