--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -24,7 +24,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             <p>
                 We're very excited to announce that our Annual Conference is returning to an in-person format for 2022.
                 This conference is a space for LGBTQ+ students and professionals in STEM fields to share their experiences and learn from one another.
-                We have programs ranging from safe spaces to talk about queer issues to discussing the latest in research conducted by our members.
+                We have programs ranging from safer spaces to talk about queer issues to discussing the latest in research conducted by our members.
             </p>
             <p>
                 If you want a space where you can be your authentic LGBTQ+ self and your authentic STEM self, this is the conference for you.
