--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -109,7 +109,7 @@ For further accessibility questions or concerns, please contact access@ostem.org
   Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
   
  ### Is there financial assistance for students to attend?
-  Yes, if you are an official chapter looking for funding, [please click here](https://form.jotform.com/222355454457055). Please note that we **do not have the funds to fully support** all members of your chapter. We recommend seeking [additional assistance on campus and in your community](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843).
+ Each year oSTEM has a Chapter Travel Grant Application. This year's application closed on September 30th. We encourage you to explore [additional campus and community resources.](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843). Starting early is key! Reach out to membership@ostem.org for ideas for next year's annual conference.
   
 ### What should I bring to the conference?
  - Copies of your resume and/or CV for the Career & Graduate School Expo
