--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -36,7 +36,12 @@ oSTEM will not be hosting a hackathon at this year’s conference. Instead, we w
 
 Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information.
   
-### Are registration discounts available? 
+### How do I register as a sponsor/exhibitor for the conference?
+Our sponsor and exhibitor packages are officially **SOLD OUT** for the 12th Annual Conference. For organizations and companies that have already secured their sponsorship/exhibitor package, you should have received communication from Linda Aragon with your unique discount code to redeem your pre-paid registrations. 
+  
+  If you are interested in partnership opportunities for the 2023 conference, please contact sponsorship@ostem.org.
+  
+  ### Are registration discounts available? 
 Yes, oSTEM student and professional members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? [Join for free now](https://ostem.org/page/how-to-join-ostem).
   
 If you are 1) an oSTEM faculty or staff advisor or 2) a member of a Massachusetts-based LGBTQ or DEI Employee Resource Group or Affinity Group, please email jamie.gonzales@ostem.org to discuss your eligibility for a discount.
