--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -64,8 +64,7 @@ Yes, you can stay at the [Sheraton Boston Hotel](https://www.marriott.com/en-us/
 Boston, MA 02199
 
 **Room Rate:** $249/night up to four (4) occupants (does not include 14.95% of state & local taxes and fees)
-- Check-in: 4:00 PM
-- Check-out: 12:00 PM
+- Check-in: 4:00 PM | Check-out: 12:00 PM
 - [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
 - For further information please call the hotel at +1 617-236-2000
 
@@ -83,14 +82,16 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [Airlines that support BOS](https://www.massport.com/logan-airport/flights/airlines/)
 
 #### Ground Transportation
-- MBTA [Blue Line to Green Line](https://goo.gl/maps/vTQyTBpLvmbqHKJTA)
+  - [Bay Back Logan Express Bus](https://www.massport.com/logan-airport/to-from-logan/transportation-options/logan-express/back-bay/)
+     - Free ride to Prudential Center (Boylston Street entrance) & $3 to airport | Stops at all Logan Airport terminals
+     - Approximately 25 - 30 minutes
+     - Runs 7 days/week every half hour from 5 AM to 9 PM leaving Back Bay and 6 AM to 10 PM leaving Logan Airport
+  - MBTA [Blue Line to Green Line](https://goo.gl/maps/vTQyTBpLvmbqHKJTA)
     - Includes approx. 0.4 miles of walking/additional travel
     - 39 minutes, $2.40 fare
-- Lyft, Uber, or Taxi
+  - Lyft, Uber, or Taxi
     - Rates vary depending on availability and demand
-    - 15 - 30 minutes
-- [Bay Back Logan Express Bus](https://www.massport.com/logan-airport/to-from-logan/transportation-options/logan-express/back-bay/)
-     - $3 to airport with a free ride back (active in the fall)
+    - Approximately 15 - 30 minutes
 
 #### Hotel Parking for Overnight and Local Guests
 - [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/)
@@ -103,8 +104,7 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [Prudential Center](https://www.prudentialcenter.com/visit/parking/)
     - $44 for daily Parking
     - 0.3 miles from hotel
-- [ParkBoston](https://park.boston.gov/)
-- [SpotHero](https://spothero.com/)
+- [ParkBoston](https://park.boston.gov/) or [SpotHero](https://spothero.com/)
 
 ## **Logistics**
  ### What am I agreeing to by registering for the conference?
