--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -79,7 +79,7 @@ If you have any questions, please reach out to conference@ostem.org.
 </div>
 
 #### Sponsor / Exhibitor Registration
-If you are an exhibitor or a sponsor, you should have received a code that will allow you to register at the button below.
+**Sponsor and Exhibitor registration is SOLD OUT for 2022.** This year's Exhibitors and Sponsors should have received a code that will allow you to register at the button below.
 If you are a sponsor or from a sponsoring organization and have questions, please reach out to sponsorship@ostem.org
 
 <div className="text-center m-4">
@@ -95,8 +95,7 @@ If you are a sponsor or from a sponsoring organization and have questions, pleas
 Boston, MA 02199
 
 **Room Rate:** $249/night up to four (4) occupants (does not include 14.95% of state & local taxes and fees)
-- Check-in: 4:00 PM
-- Check-out: 12:00 PM
+- Check-in: 4:00 PM | Check-out: 12:00 PM
 - [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
 - For further information please call the hotel at +1 617-236-2000
 
