--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -122,6 +122,7 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [Bay Back Logan Express Bus](https://www.massport.com/logan-airport/to-from-logan/transportation-options/logan-express/back-bay/)
      - Free ride to Prudential Center (Boylston Street entrance) & $3 to airport | Stops at all Logan Airport terminals
      - Approximately 25 - 30 minutes
+     - Wheelchair equipped and ADA compliant
      - Runs 7 days/week every half hour from 5 AM to 9 PM leaving Back Bay and 6 AM to 10 PM leaving Logan Airport
 - MBTA [Blue Line to Green Line](https://goo.gl/maps/vTQyTBpLvmbqHKJTA)
     - Includes approx. 0.4 miles of walking/additional travel
