--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -98,21 +98,27 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/)
     - $65 for daily on-site and valet Parking
     - Electric car charging stations available
-- [Hynes Auditorium Garage](https://www.pilgrimparking.com/boston-parking-garages/hynes-auditorium-garage)
+- [Hynes Auditorium Garage](https://www.pilgrimparking.com/boston-parking-garages/hynes-auditorium-garage) (Open 24 hours)
     - $40 for 10-24 hours
-    - Open 24 hours
     - 0.1 miles from Hotel
 - [Prudential Center](https://www.prudentialcenter.com/visit/parking/)
     - $44 for daily Parking
     - 0.3 miles from hotel
 - [ParkBoston](https://park.boston.gov/) or [SpotHero](https://spothero.com/)
 
-## **Logistics**
- ### What am I agreeing to by registering for the conference?
-  All attendees are agreeing to [oSTEM’s Code of Conduct](https://ostem.org/Page/code-of-conduct) by registering for the conference. Please review and be familiar with the code of conduct prior to attending.
+## **Career & Graduate School Expo**
+ ### Will there be a career fair at the conference?
+  Yes! There will be 100+ sponsors and exhibitors seeking diverse talent in STEM. You'll have the opportunity to connect with recruiters at the 2-day Career Fair and Graduate School Expo. [Click here to see a list of our current exhibitors.](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
   
  ### How do I make sure employers have access to my resume?
   Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
+  
+ ### How do I prepare for the expo?
+   Visit the [oSTEM YouTube Career Fair Prep page](https://youtube.com/playlist?list=PLUFlbmgoLVsG98TbAgfx1RWTrpGROmfjl) or your campus career center. We recommend beginning your prep 1-2 weeks before the conference.
+  
+  ## **Logistics**
+ ### What am I agreeing to by registering for the conference?
+  All attendees are agreeing to [oSTEM’s Code of Conduct](https://ostem.org/Page/code-of-conduct) by registering for the conference. Please review and be familiar with the code of conduct prior to attending.
   
  ### Is there financial assistance for students to attend?
  Each year oSTEM has a Chapter Travel Grant Application. This year's application closed on September 30th. We encourage you to explore [additional campus and community resources.](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843). Starting early is key! Reach out to membership@ostem.org for ideas for next year's annual conference.
