--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -22,7 +22,7 @@ taking place **November 11 - 13, 2022** at the Sheraton at the Prudential Center
 We have 3 ticket types:
  - Student
  - Professional
- - Expo-Only
+ - [Expo-Only](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
 
 <br />
 Ticket prices are subjected to a 2% + $0.99 fee. Registration deadline is October 14, 2022.
@@ -66,7 +66,7 @@ oSTEM will provide Friday lunch and Saturday breakfast, lunch, & dinner. General
     </tr>
 </table>
 
-The Expo-only pass grants access only to the Graduate School and Career Fair Expo on Friday, November 11 and Saturday, November 12.
+The Expo-only pass grants access only to the Graduate School and Career Fair Expo on Friday, November 11 and Saturday, November 12. There will be 100+ sponsors and exhibitors seeking diverse talent in STEM. [Click here to see a list of our current exhibitors.](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
 
 </TopicSquare>
 
