--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -114,7 +114,9 @@ For further accessibility questions or concerns, please contact access@ostem.org
   Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
   
  ### How do I prepare for the expo?
-   Visit the [oSTEM YouTube Career Fair Prep page](https://youtube.com/playlist?list=PLUFlbmgoLVsG98TbAgfx1RWTrpGROmfjl) or your campus career center. We recommend beginning your prep 1-2 weeks before the conference.
+  - Visit the [oSTEM YouTube Career Fair Prep page](https://youtube.com/playlist?list=PLUFlbmgoLVsG98TbAgfx1RWTrpGROmfjl) or your campus career center to learn more about tailoring resumes, creating an elevator pitch, and how to research employers. We recommend beginning your prep 1-2 weeks before the conference.
+ 
+ - Dress code is [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
   ## **Logistics**
  ### What am I agreeing to by registering for the conference?
