--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -34,7 +34,7 @@ oSTEM will not be hosting a hackathon at this year’s conference. Instead, we w
 
 ### How do I register for the conference?
 
-Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information.
+Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information. We highly encourage attendees to register by October 14, 2022.
   
 ### How do I register as a sponsor/exhibitor for the conference?
 Our sponsor and exhibitor packages are officially **SOLD OUT** for the 12th Annual Conference. For organizations and companies that have already secured their sponsorship/exhibitor package, you should have received communication from Linda Aragon with your unique discount code to redeem your pre-paid registrations. 
