--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -24,7 +24,7 @@ Location:
   
 ### How is COVID-19 and the monkeypox outbreak affecting the conference?
 
-We have decided to host our 2022 conference in person. Our COVID-19 and monkeypox outbreak mitigation strategy is still under development; more details will be forthcoming.
+The 2022 conference will be held in-person. Our COVID-19 and monkeypox outbreak policies are subject to change on limited notice as we monitor local, state, and federal guidelines and circumstances. For the current policy, visit https://conference.ostem.org/2022/covid19.
   
 ### Will there be a Hackathon this year?
   
