--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -32,7 +32,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **3:40 PM - 4:40 PM**	    Workshop Block 4
 - **4:50 PM - 5:50 PM**	    Workshop Block 5
 - **6:30 PM - 9:00 PM**	    oSTEM Gala with Dinner
-- **9:00 PM - 11:00 PM**	Social Mixers
+- **9:00 PM - 11:00 PM**	Evening Social
 
 ## Sunday, November 13
 - **8:00 AM - 9:00 AM**	    Breakfast
