--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -31,7 +31,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **2:10 PM - 3:10 PM**	    Workshop Block 3
 - **3:40 PM - 4:40 PM**	    Workshop Block 4
 - **4:50 PM - 5:50 PM**	    Workshop Block 5
-- **6:30 PM - 9:00 PM**	    oSTEM Gala with Dinner
+- **6:30 PM - 9:00 PM**	    Dinner: Keynote & Awards
 - **9:00 PM - 11:00 PM**	Evening Social
 
 ## Sunday, November 13
