--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -16,7 +16,7 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 ## Friday, November 11
 - **9:00 AM - 10:00 AM**   New to the Conference Session
 - **9:00 AM - 1:00 PM**    Site Visits (Limited spots available.)
-- **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Greet Session
+- **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Mingle Session
 - **12:00 PM - 1:00 PM**   Conference Kickoff Lunch with Keynote 
 - **1:00 PM - 4:15 PM**	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
 - **4:30 PM - 5:30 PM**	   Workshop Block 1 | Racial Justice Program Part 1
