--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -72,7 +72,7 @@ Boston, MA 02199
 <CTAButton onClick="https://book.passkey.com/go/oSTEM2022" backgroundColor="skyblue">Book your room</CTAButton>
 </div>
 
-The room-block rate will end on **October 21st**. (Deadlie was extended.) Book your room before the block fills up!
+The room-block rate will end on **October 21st**. (Date was extended.) Book your room before the block fills up!
 
 For further accessibility questions or concerns, please contact access@ostem.org.
   
