--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -18,9 +18,10 @@ Location:
    [Sheraton Boston Hotel](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/) <br/>
 39 Dalton St, Boston, MA 02199
 
-### Where can I find the high-level schedule?
+### Where can I find the schedule and agenda?
   
-[Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
+[Click here for the 2022 conference agenda](https://whova.com/embedded/event/tTwmdLA%40Va-l9L5Fq6HAx4EtI7njz4P25IpFWfGrgOM%3D/?utc_source=ems)<br>
+  [Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
   
 ### How is COVID-19 and the monkeypox outbreak affecting the conference?
 
