--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -20,8 +20,8 @@ Location:
 
 ### Where can I find the schedule and agenda?
   
-[Click here for the 2022 conference agenda](https://whova.com/embedded/event/tTwmdLA%40Va-l9L5Fq6HAx4EtI7njz4P25IpFWfGrgOM%3D/?utc_source=ems)<br>
-  [Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
+[Click here for the 2022 conference agenda](https://whova.com/embedded/event/tTwmdLA%40Va-l9L5Fq6HAx4EtI7njz4P25IpFWfGrgOM%3D/?utc_source=ems)<br/>
+[Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
   
 ### How is COVID-19 and the monkeypox outbreak affecting the conference?
 
@@ -29,7 +29,7 @@ The 2022 conference will be held in-person. Our COVID-19 and monkeypox outbreak 
   
 ### Will there be a Hackathon this year?
   
-oSTEM will not be hosting a hackathon at this year’s conference. Instead, we will be collaborating with the [NASA Space Apps Challenge](https://www.spaceappschallenge.org/) happening October 1-2, 2022. To learn more about this opportunity, please visit [Participant FAQ - NASA International Space Apps Challenge](https://www.spaceappschallenge.org/resources/faq/). If you do not see a local event for your city, you can join the [Universal Event](https://2020.spaceappschallenge.org/locations/universal-event/).
+oSTEM will not be hosting a hackathon at this year's conference. Instead, we will be collaborating with the [NASA Space Apps Challenge](https://www.spaceappschallenge.org/) happening October 1-2, 2022. To learn more about this opportunity, please visit [Participant FAQ - NASA International Space Apps Challenge](https://www.spaceappschallenge.org/resources/faq/). If you do not see a local event for your city, you can join the [Universal Event](https://2020.spaceappschallenge.org/locations/universal-event/).
 
 ## **Registration**
 
@@ -40,9 +40,9 @@ Registration for the conference is now open! Visit our [Conference Registration 
 ### How do I register as a sponsor/exhibitor for the conference?
 Our sponsor and exhibitor packages are officially **SOLD OUT** for the 12th Annual Conference. For organizations and companies that have already secured their sponsorship/exhibitor package, you should have received communication from Linda Aragon with your unique discount code to redeem your pre-paid registrations. 
   
-  If you are interested in partnership opportunities for the 2023 conference, please contact sponsorship@ostem.org.
+If you are interested in partnership opportunities for the 2023 conference, please contact sponsorship@ostem.org.
   
-  ### Are registration discounts available? 
+### Are registration discounts available? 
 Yes, oSTEM student and professional members receive an automatic discount. Not an [oSTEM member](https://ostem.org/page/how-to-join-ostem)? [Join for free now](https://ostem.org/page/how-to-join-ostem).
   
 If you are 1) an oSTEM faculty or staff advisor or 2) a member of a Massachusetts-based LGBTQ or DEI Employee Resource Group or Affinity Group, please email jamie.gonzales@ostem.org to discuss your eligibility for a discount.
@@ -50,7 +50,7 @@ If you are 1) an oSTEM faculty or staff advisor or 2) a member of a Massachusett
 ### What does conference registration cover?
 
 - The Student and Professional tickets are both all-access passes to conference programming, events, and meals.
-  - oSTEM will provide Friday lunch, Saturday breakfast, lunch, and dinner, and Sunday breakfast.
+- oSTEM will provide Friday lunch, Saturday breakfast, lunch, and dinner, and Sunday breakfast.
 - The Expo-only pass grants access only to the Graduate School and Career Fair Expo on Friday, November 11 and Saturday, November 12.
 
 ### Will there be on-site registration?
@@ -108,23 +108,23 @@ For further accessibility questions or concerns, please contact access@ostem.org
 - [ParkBoston](https://park.boston.gov/) or [SpotHero](https://spothero.com/)
 
 ## **Career & Graduate School Expo**
- ### Will there be a career fair at the conference?
-  Yes! There will be 100+ sponsors and exhibitors seeking diverse talent in STEM. You'll have the opportunity to connect with recruiters at the 2-day Career Fair and Graduate School Expo. [Click here to see a list of our current exhibitors.](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
+### Will there be a career fair at the conference?
+Yes! There will be 100+ sponsors and exhibitors seeking diverse talent in STEM. You'll have the opportunity to connect with recruiters at the 2-day Career Fair and Graduate School Expo. [Click here to see a list of our current exhibitors.](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
   
- ### How do I make sure employers have access to my resume?
-  Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
+### How do I make sure employers have access to my resume?
+Set up an account in the [oSTEM Career Center](https://careers.ostem.org/login/?goto=%2Faccount%2F&msg=1) and upload your resume. Doing so prior to the conference will increase your chances of receiving an interview during the conference.
   
- ### How do I prepare for the expo?
-  - Visit the [oSTEM YouTube Career Fair Prep page](https://youtube.com/playlist?list=PLUFlbmgoLVsG98TbAgfx1RWTrpGROmfjl) or your campus career center to learn more about tailoring resumes, creating an elevator pitch, and how to research employers. We recommend beginning your prep 1-2 weeks before the conference.
+### How do I prepare for the expo?
+- Visit the [oSTEM YouTube Career Fair Prep page](https://youtube.com/playlist?list=PLUFlbmgoLVsG98TbAgfx1RWTrpGROmfjl) or your campus career center to learn more about tailoring resumes, creating an elevator pitch, and how to research employers. We recommend beginning your prep 1-2 weeks before the conference.
  
- - Dress code is [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
+- Dress code is [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
-  ## **Logistics**
- ### What am I agreeing to by registering for the conference?
-  All attendees are agreeing to [oSTEM’s Code of Conduct](https://ostem.org/Page/code-of-conduct) by registering for the conference. Please review and be familiar with the code of conduct prior to attending.
+## **Logistics**
+### What am I agreeing to by registering for the conference?
+All attendees are agreeing to [oSTEM’s Code of Conduct](https://ostem.org/Page/code-of-conduct) by registering for the conference. Please review and be familiar with the code of conduct prior to attending.
   
- ### Is there financial assistance for students to attend?
- Each year oSTEM has a Chapter Travel Grant Application. This year's application closed on September 30th. We encourage you to explore [additional campus and community resources.](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843). Starting early is key! Reach out to membership@ostem.org for ideas for next year's annual conference.
+### Is there financial assistance for students to attend?
+Each year oSTEM has a Chapter Travel Grant Application. This year's application closed on September 30th. We encourage you to explore [additional campus and community resources.](https://ostem.notion.site/Chapter-Finances-oSTEM-Annual-Conference-bb9f01b02b474b3995c7b8ce06b8e843). Starting early is key! Reach out to membership@ostem.org for ideas for next year's annual conference.
   
 ### What should I bring to the conference?
  - Copies of your resume and/or CV for the Career & Graduate School Expo
@@ -132,10 +132,10 @@ For further accessibility questions or concerns, please contact access@ostem.org
  - Nice, comfortable shoes for walking
   
 ### What is the dress code?
-  Attendees are asked to dress in [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
+Attendees are asked to dress in [business casual attire](https://ostem.notion.site/b87f2caffdf441ccaa52a67aee979019?v=1ec0ef678ffe41d6982d57639b2c4134) which includes slacks, dark jeans, collared shirts, blouses, sweaters, blazers, polos, skirts, dresses, and closed-toe shoes. Avoid clothing with holes or excessive wrinkles. Please wear attire that makes you feel confident and highlights your authentic identity and expression as you connect with peers, colleagues and future employers.
   
 ### Do I need to be "out" to attend? Will photos be taken?
-  No. Everyone is welcome to attend the conference. We strive to create a safe and inclusive space regardless on if you are out or selectively out. While photos will be taken at the conference, anyone uncomfortable with their photo being shared has the option to pick a lanyard that indicates to photographers and other guests that you do not wish to have your photo shared.
+No. Everyone is welcome to attend the conference. We strive to create a safe and inclusive space regardless on if you are out or selectively out. While photos will be taken at the conference, anyone uncomfortable with their photo being shared has the option to pick a lanyard that indicates to photographers and other guests that you do not wish to have your photo shared.
   
 ### I have a question which is not answered here.
   
