--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -21,6 +21,7 @@ Location:
 ### Where can I find the schedule and agenda?
   
 [Click here for the 2022 conference agenda](https://whova.com/embedded/event/tTwmdLA%40Va-l9L5Fq6HAx4EtI7njz4P25IpFWfGrgOM%3D/?utc_source=ems)<br/>
+  [Click here for the 2022 Keynote & Workshop Speakers list](https://whova.com/embedded/speakers/uCHT680bVm6tMc3n5nrtX4ye8y61mXR91HMBECJrjR4%3D/?view=preview)<br/>
 [Click here for the 2022 high-level schedule](https://conference.ostem.org/2022/schedule)
   
 ### How is COVID-19 and the monkeypox outbreak affecting the conference?
