--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -36,7 +36,7 @@ oSTEM will not be hosting a hackathon at this year's conference. Instead, we wil
 
 ### How do I register for the conference?
 
-Registration for the conference is now open! Visit our [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information. We highly encourage attendees to register by October 21, 2022.
+Registration for the full conference is now closed. Expo-only tickets are available until November 1, 2022. Visit [Conference Registration Page](https://conference.ostem.org/2022/registration) for pricing and more information.
   
 ### How do I register as a sponsor/exhibitor for the conference?
 Our sponsor and exhibitor packages are officially **SOLD OUT** for the 12th Annual Conference. For organizations and companies that have already secured their sponsorship/exhibitor package, you should have received communication from Linda Aragon with your unique discount code to redeem your pre-paid registrations. 
@@ -48,7 +48,7 @@ Yes, oSTEM student and professional members receive an automatic discount. Not a
   
 If you are 1) an oSTEM faculty or staff advisor or 2) a member of a Massachusetts-based LGBTQ or DEI Employee Resource Group or Affinity Group, please email jamie.gonzales@ostem.org to discuss your eligibility for a discount.
 
-### What does conference registration cover?
+### What does full conference registration cover?
 
 - The Student and Professional tickets are both all-access passes to conference programming, events, and meals.
 - oSTEM will provide Friday lunch, Saturday breakfast, lunch, and dinner, and Sunday breakfast.
