--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -32,10 +32,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         </div>
         <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-ostem-blue border-solid pb-4">
             <div className="bg-ostem-blue">
-                <h3 className="p-4">Registration - Now Open!</h3>
+                <h3 className="p-4">Registration Closed!</h3>
             </div>
             <p className="p-4">
-                Registration for our conference is now open! Register today on our <a href="/2022/registration">registration page</a>. <br />
+                Registration for full conference is now closed! Expo-only tickets available until November 1, 2022. <a href="/2022/registration">registration page</a>. <br />
                 oSTEM members receive additional discounted pricing.
             </p>
             <div className="text-xl flex justify-center p-2">
@@ -47,7 +47,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Request for Proposals</h3>
             </div>
             <p className="p-4">
-                oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
+                We are no longer taking proposals for 2022. oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
                 Our conference offers a unique opportunity for LGBTQ individuals in STEM to present to an audience of peers. 
                 Come be a part of the foundational experience and submit a program today! 
                 We've had presentations on identity issues such as "Traveling while Trans" and technical content like "Life Lessons Looking Through Infrared Technology". 
