--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,8 +35,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Registration Closed!</h3>
             </div>
             <p className="p-4">
-                Registration for full conference is now closed! Expo-only tickets available until November 1, 2022. <a href="/2022/registration">registration page</a>. <br />
-                oSTEM members receive additional discounted pricing.
+                Registration for full conference is now closed! Expo-only tickets available until November 1, 2022 on the <a href="/2022/registration">registration page</a>. <br />
+             
             </p>
             <div className="text-xl flex justify-center p-2">
                 <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue">Register for the conference</CTAButton>
