--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -8,7 +8,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
     </p>
 </div>
 
-All times listed are in Eastern Time (ET). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
+All times listed are in Eastern Time (ET). Please note that this is a high-level schedule. [Click here for the detailed schedule](https://whova.com/embedded/event/secondary/HEK1dIqCNC80Qs22YWXBmnf7LY0duHd1dmQ6ErMvRr8%3D/?utc_source=ems).
 
 ## Thursday, November 10
 - **3:00 PM - 7:00 PM**   Registration Desk Open
@@ -19,9 +19,9 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 - **10:00 AM - 12:00 PM**  Career and Graduate School Bootcamp | Gender Affirming Clothing Swap | Meet & Mingle Session
 - **12:00 PM - 1:00 PM**   Conference Kickoff Lunch with Keynote 
 - **1:00 PM - 4:15 PM**	   [Career and Graduate School Expo](https://docs.google.com/document/d/1VTDHJsQ7WGci9WwfWzII3hnkitn2utuVXdQnAiJEPzo/edit?usp=sharing) | Poster Sessions
-- **4:30 PM - 5:30 PM**	   Workshop Block 1 | Racial Justice Program Part 1
-- **5:40 PM - 6:40 PM**	   Workshop Block 2 | Racial Justice Program Part 2
-- **6:45 PM - 7:30 PM**	   Membership Regional Mixer
+- **4:30 PM - 5:30 PM**	   Workshop Block 1 | Racial Justice Program Part 1 of 2
+- **5:40 PM - 6:40 PM**	   Workshop Block 2 | Racial Justice Program Part 2 of 2
+- **6:45 PM - 7:30 PM**	   Membership Mixer
 
 ## Saturday, November 12
 - **8:00 AM - 10:00 AM**	Breakfast
@@ -36,7 +36,8 @@ All times listed are in Eastern Time (ET). Please note that this is a high-level
 
 ## Sunday, November 13
 - **8:00 AM - 9:00 AM**	    Breakfast
-- **9:00 AM - 12:00 PM**	Gender Affirmation Symposium    
+- **9:00 AM - 12:00 PM**	Gender Affirmation Symposium
+- **11:30 AM - 1:00 PM**	So You Want to Plan a Regional Conference?
 
 If you have any questions please reach out at [conference@ostem.org](mailto:conference@ostem.org?subject=High-Level%20Schedule%20Question%20)
 
