--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -10,7 +10,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 All times listed are in Eastern Time (ET). Please note that this is a high-level schedule. For most up-to-date schedule, please visit the detailed scheduled below.
 <div className="text-center m-4"> 
-<CTAButton onClick="[https://whova.com/portal/registration/annua3_202211/](https://whova.com/embedded/event/secondary/HEK1dIqCNC80Qs22YWXBmnf7LY0duHd1dmQ6ErMvRr8%3D/?utc_source=ems)" backgroundColor="skyblue">2022 Detailed Scheduled</CTAButton>
+<CTAButton onClick="[[https://whova.com/portal/registration/annua3_202211/](https://whova.com/embedded/event/secondary/HEK1dIqCNC80Qs22YWXBmnf7LY0duHd1dmQ6ErMvRr8%3D/?utc_source=ems)](https://whova.com/embedded/event/secondary/HEK1dIqCNC80Qs22YWXBmnf7LY0duHd1dmQ6ErMvRr8%3D/?utc_source=ems)" backgroundColor="skyblue">2022 Detailed Scheduled</CTAButton>
 </div>
 
 ## Thursday, November 10
