--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -7,9 +7,9 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
         2022 High Level Conference Schedule
     </p>
 </div>
-
-    <div className="text-center m-4"> 
-<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/" backgroundColor="skyblue">Attendee Registration</CTAButton>
+    
+    <div className="text-2xl flex justify-center p-8">
+  <CTAButton onClick="https://whova.com/embedded/event/secondary/fOYrWWErJromxE-RfmI2MYIKMXH8ie78YG06k612QTg%3D/?utc_source=ems">View the full agenda here!</CTAButton>
 </div>
     
 ## Thursday, November 10
