--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -8,9 +8,9 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
     </p>
 </div>
     
-    <div className="text-2xl flex justify-center p-8">
-  <CTAButton onClick="https://whova.com/embedded/event/secondary/fOYrWWErJromxE-RfmI2MYIKMXH8ie78YG06k612QTg%3D/?utc_source=ems">View the full agenda here!</CTAButton>
-</div>
+Times listed below are in Eastern Time. 
+    
+ [Click here for a view of the full agenda.](https://whova.com/embedded/event/secondary/fOYrWWErJromxE-RfmI2MYIKMXH8ie78YG06k612QTg%3D/?utc_source=ems)
     
 ## Thursday, November 10
 - **3:00 PM - 7:00 PM**   Registration Desk Open
