--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -47,7 +47,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Request for Proposals</h3>
             </div>
             <p className="p-4">
-                We are no longer taking proposals for 2022. oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
+                We are no longer accepting proposals for 2022. oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
                 Our conference offers a unique opportunity for LGBTQ individuals in STEM to present to an audience of peers. 
                 Come be a part of the foundational experience and submit a program today! 
                 We've had presentations on identity issues such as "Traveling while Trans" and technical content like "Life Lessons Looking Through Infrared Technology". 
