--- a/src/pages/2022/faq.mdx
+++ b/src/pages/2022/faq.mdx
@@ -28,9 +28,7 @@ Location:
 
 The 2022 conference will be held in-person. Our COVID-19 and monkeypox outbreak policies are subject to change on limited notice as we monitor local, state, and federal guidelines and circumstances. For the current policy, visit https://conference.ostem.org/2022/covid19.
   
-### Will there be a Hackathon this year?
-  
-oSTEM will not be hosting a hackathon at this year's conference. Instead, we will be collaborating with the [NASA Space Apps Challenge](https://www.spaceappschallenge.org/) happening October 1-2, 2022. To learn more about this opportunity, please visit [Participant FAQ - NASA International Space Apps Challenge](https://www.spaceappschallenge.org/resources/faq/). If you do not see a local event for your city, you can join the [Universal Event](https://2020.spaceappschallenge.org/locations/universal-event/).
+**As a condition of your admission to all oSTEM, Inc.sponsored or supported events, you will be required to complete this attestation upon your arrival at the conference:**https://cdn.ostem.org/publicfiles/Onsite_COVID_Health_Screening_Form.pdf
 
 ## **Registration**
 
