--- a/src/pages/2022/registration.mdx
+++ b/src/pages/2022/registration.mdx
@@ -17,9 +17,9 @@ taking place **November 11 - 13, 2022** at the Sheraton at the Prudential Center
 
 ***
 
-### Full Conference Registration is now closed! Expo-only tickets available until November 1.
+### Conference and Expo Registration is now closed! 
 
-We have 3 ticket types:
+There are 3 ticket types:
  - Student
  - Professional
  - [Expo-Only](https://whova.com/embedded/exhibitor/SNc2J%40thQEVqUcP3e12zVKZLxJmuXxrYvZoEIzhRaow%3D/?utc_source=ems)
@@ -74,17 +74,9 @@ The Expo-only pass grants access only to the Graduate School and Career Fair Exp
 This year we are partnering with [Whova](https://whova.com/) to bring you a smooth registration experience. Use the button below to register for student, professional, and expo-only ticket types.
 If you have any questions, please reach out to conference@ostem.org.
 
-<div className="text-center m-4"> 
-<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/" backgroundColor="skyblue">Attendee Registration</CTAButton>
-</div>
-
 #### Sponsor / Exhibitor Registration
 **Sponsor and Exhibitor registration is SOLD OUT for 2022.** This year's Exhibitors and Sponsors should have received a code that will allow you to register at the button below.
 If you are a sponsor or from a sponsoring organization and have questions, please reach out to sponsorship@ostem.org
-
-<div className="text-center m-4">
-<CTAButton onClick="https://whova.com/portal/registration/annua3_202211/g974p95a" backgroundColor="rasp">Sponsor/Exhibitor Registration</CTAButton>
-</div>
 
 ***
 
@@ -99,11 +91,7 @@ Boston, MA 02199
 - [Accessibility Information](https://www.marriott.com/en-us/hotels/bosbo-sheraton-boston-hotel/overview/#access:~:text=617%2D236%2D2000-,Accessible,-Hotel%20Features)
 - For further information please call the hotel at +1 617-236-2000
 
-<div className="text-center m-4">
-<CTAButton onClick="https://book.passkey.com/go/oSTEM2022" backgroundColor="skyblue">Book your room</CTAButton>
-</div>
-
-The room-block rate will end on **October 21th**. (Date was extended) Book your room before the block fills up!
+The room-block rate ended on **October 21th**.
 
 For further accessibility questions or concerns, please contact access@ostem.org.
 
