--- a/src/pages/2022/schedule.mdx
+++ b/src/pages/2022/schedule.mdx
@@ -10,7 +10,7 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
     
 Times listed below are in Eastern Time. <br>
     
-[Click here for a view of the full agenda.](https://whova.com/embedded/event/secondary/fOYrWWErJromxE-RfmI2MYIKMXH8ie78YG06k612QTg%3D/?utc_source=ems)
+[Click here for a view of the full agenda](https://whova.com/embedded/event/secondary/fOYrWWErJromxE-RfmI2MYIKMXH8ie78YG06k612QTg%3D/?utc_source=ems).
     
 
 ## Thursday, November 10
