--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -38,7 +38,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 Registration for full conference and expo is now closed!             
             </p>
             <div className="text-xl flex justify-center p-2">
-                <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue">Register for the Career & Graduate School Expo</CTAButton>
+                <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue"> 2022 Registeration Closed</CTAButton>
             </div>
         </div>
         <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-deepwater-light border-solid pb-4">
